adds a semi streaming-compatible Kalman filter

--- a/workspace/day-notebooks/25-02-19.ipynb
+++ b/workspace/day-notebooks/25-02-19.ipynb
@@ -9,12 +9,12 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from adaptive_latents import ArrayWithTime\n",
+    "from adaptive_latents import ArrayWithTime, Bubblewrap\n",
     "import adaptive_latents as al\n",
     "import pandas as pd\n",
     "import itertools\n",
     "\n",
-    "from adaptive_latents.transformer import DecoupledTransformer, Concatenator\n",
+    "from adaptive_latents.transformer import DecoupledTransformer, StreamingTransformer, Concatenator\n",
     "from adaptive_latents.regressions import BaseVanillaOnlineRegressor, BaseKNearestNeighborRegressor, OnlineRegressor\n",
     "\n",
     "\n",
@@ -35,57 +35,19 @@
    "id": "2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class StimRegressor(DecoupledTransformer):\n",
-    "    def __init__(self, input_streams=None, spatial_stim_response=True, *args, **kwargs):\n",
-    "        input_streams = input_streams or {}\n",
-    "        super().__init__(input_streams=input_streams, *args, **kwargs)\n",
-    "        self.reg = BaseVanillaOnlineRegressor()\n",
-    "        self.stim_reg = BaseKNearestNeighborRegressor(k=2)\n",
-    "        self.spatial_stim_response = spatial_stim_response\n",
-    "        self.last_seen = None\n",
-    "        self.last_seen_stim = None\n",
-    "        self.predictions = []\n",
-    "        self.auto_pred = []\n",
-    "        self.stim_pred = []\n",
-    "\n",
-    "    def _partial_fit(self, data, stream):\n",
-    "        if self.input_streams[stream] == 'X':\n",
-    "            if self.last_seen is not None:\n",
-    "                auto_pred = ArrayWithTime(self.reg.predict(self.last_seen), data.t)\n",
-    "                \n",
-    "                stim_pred = np.zeros(shape=data.shape)\n",
-    "                if self.last_seen_stim.any() and self.spatial_stim_response:\n",
-    "                    stim_pred += self.stim_reg.predict(self.last_seen)\n",
-    "                stim_pred = ArrayWithTime(stim_pred, data.t)\n",
-    "                \n",
-    "                prediction = auto_pred + stim_pred\n",
-    "                self.predictions.append(prediction)\n",
-    "                self.auto_pred.append(auto_pred)\n",
-    "                self.stim_pred.append(stim_pred)\n",
-    "                \n",
-    "                if not self.last_seen_stim.any():\n",
-    "                    self.reg.observe(self.last_seen, data)\n",
-    "                else:\n",
-    "                    prediction = self.reg.predict(self.last_seen)\n",
-    "                    self.stim_reg.observe(self.last_seen, data-prediction)\n",
-    "\n",
-    "                    prediction = ArrayWithTime(prediction, data.t)\n",
-    "                \n",
-    "            self.last_seen = data\n",
-    "\n",
-    "        if self.input_streams[stream] == 'stim':\n",
-    "            self.last_seen_stim = data\n",
-    "        \n",
-    "\n",
-    "    def transform(self, data, stream=0, return_output_stream=False):\n",
-    "        return data, stream\n",
-    "        "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "source": [
     "## Trivial manual example"
@@ -94,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Nest example"
@@ -181,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": []
