--- a/workspace/day-notebooks/25-03-17.ipynb
+++ b/workspace/day-notebooks/25-03-17.ipynb
@@ -9,9 +9,12 @@
    "source": [
     "import adaptive_latents as al\n",
     "from adaptive_latents import ArrayWithTime\n",
-    "from adaptive_latents.input_sources import LDS\n",
+    "from collections import deque\n",
+    "from adaptive_latents.input_sources import LDS, KalmanFilter\n",
+    "from adaptive_latents.transformer import StreamingTransformer\n",
     "import matplotlib.pyplot as plt\n",
-    "from adaptive_latents import VJF, Bubblewrap, KalmanFilter\n",
+    "from adaptive_latents import VJF, Bubblewrap, StreamingKalmanFilter\n",
+    "from adaptive_latents.regressions import BaseKNearestNeighborRegressor\n",
     "import numpy as np\n",
     "\n",
     "rng = np.random.default_rng()\n"
@@ -24,36 +27,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = Bubblewrap()\n",
-    "\n",
-    "b.input_streams"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v = VJF()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi)\n",
+    "_, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi, u_function='constant')\n",
+    "# _, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi, u_function=lambda **k: np.zeros(3))\n",
     "stim.t = stim.t"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,109 +52,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adaptive_latents.transformer import DecoupledTransformer\n",
-    "from adaptive_latents.regressions import BaseVanillaOnlineRegressor, BaseKNearestNeighborRegressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class StimRegressor(DecoupledTransformer):\n",
-    "    def __init__(self, input_streams=None, spatial_stim_response=True, *args, **kwargs):\n",
-    "        input_streams = input_streams or {}\n",
-    "        super().__init__(input_streams=input_streams, *args, **kwargs)\n",
-    "        self.reg = BaseVanillaOnlineRegressor()\n",
+    "class StimRegressor(StreamingTransformer):\n",
+    "    def __init__(self, autoreg=None, attempt_correction=True, input_streams=None, output_streams=None, log_level=None):\n",
+    "        input_streams = input_streams or {2:'X', 1:'stim', 0:'dt_X'}\n",
+    "        super().__init__(input_streams=input_streams, output_streams=output_streams, log_level=log_level)\n",
+    "        if autoreg is None:\n",
+    "            autoreg = StreamingKalmanFilter()\n",
+    "        self.autoreg = autoreg\n",
+    "        self.attempt_correction = attempt_correction\n",
     "        self.stim_reg = BaseKNearestNeighborRegressor(k=2)\n",
-    "        self.spatial_stim_response = spatial_stim_response\n",
-    "        self.last_seen = None\n",
-    "        self.last_seen_stim = None\n",
-    "        self.predictions = []\n",
-    "        self.auto_pred = []\n",
-    "        self.stim_pred = []\n",
+    "        self.last_seen_stims = deque(maxlen=1)\n",
     "\n",
-    "    def _partial_fit(self, data, stream):\n",
+    "\n",
+    "    def _partial_fit_transform(self, data, stream, return_output_stream):\n",
     "        if self.input_streams[stream] == 'X':\n",
-    "            if self.last_seen is not None:\n",
-    "                auto_pred = ArrayWithTime(self.reg.predict(self.last_seen), data.t)\n",
-    "\n",
-    "                stim_pred = np.zeros(shape=data.shape)\n",
-    "                if self.last_seen_stim.any() and self.spatial_stim_response:\n",
-    "                    stim_pred += self.stim_reg.predict(self.last_seen)\n",
-    "                stim_pred = ArrayWithTime(stim_pred, data.t)\n",
-    "\n",
-    "                prediction = auto_pred + stim_pred\n",
-    "                self.predictions.append(prediction)\n",
-    "                self.auto_pred.append(auto_pred)\n",
-    "                self.stim_pred.append(stim_pred)\n",
-    "\n",
-    "                if not self.last_seen_stim.any():\n",
-    "                    self.reg.observe(self.last_seen, data)\n",
-    "                else:\n",
-    "                    prediction = self.reg.predict(self.last_seen)\n",
-    "                    self.stim_reg.observe(self.last_seen, data-prediction)\n",
-    "\n",
-    "                    prediction = ArrayWithTime(prediction, data.t)\n",
-    "\n",
-    "            self.last_seen = data\n",
+    "            if self.last_seen_stims and np.array(self.last_seen_stims).any():\n",
+    "                prediction = self.autoreg.partial_fit_transform(np.array([[X.dt]]), 'dt_X')\n",
+    "                self.stim_reg.observe(self.autoreg.state, prediction - data)\n",
+    "            self.autoreg.partial_fit_transform(data, 'X')\n",
+    "        \n",
+    "        if self.input_streams[stream] == 'dt_X':\n",
+    "            data = self.autoreg.partial_fit_transform(data, 'dt_X')\n",
+    "            if self.last_seen_stims and np.array(self.last_seen_stims).any() and self.attempt_correction:\n",
+    "                # raise  Exception()\n",
+    "                pred = self.stim_reg.predict(self.autoreg.state)\n",
+    "                data = data * np.nan\n",
+    "            \n",
     "\n",
     "        if self.input_streams[stream] == 'stim':\n",
-    "            self.last_seen_stim = data\n",
+    "            self.last_seen_stims.append(data)\n",
+    "\n",
+    "        return (data, stream) if return_output_stream else data\n",
     "\n",
     "\n",
-    "    def transform(self, data, stream=0, return_output_stream=False):\n",
-    "        return data, stream\n",
+    "    def get_params(self, deep=True):\n",
+    "        return super().get_params(deep) | dict(autoreg=self.autoreg)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# StimRegressor().test_if_api_compatible();\n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=True)\n",
-    "s1.offline_run_on([X, stim], show_tqdm=True)\n",
+    "n_steps = 1\n",
+    "qX = ArrayWithTime(X.dt * n_steps * np.ones((len(X),1)), (X.t + stim.t) / 2)\n",
     "\n",
-    "s2 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=False)\n",
-    "s2.offline_run_on([X, stim], show_tqdm=True);\n"
+    "s1 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=False)\n",
+    "o1 = s1.offline_run_on([qX, stim, X], show_tqdm=True)\n",
+    "\n",
+    "s2 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=True)\n",
+    "o2 = s2.offline_run_on([qX, stim, X], show_tqdm=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "_, axs = plt.subplots(squeeze=False)\n",
     "\n",
-    "\n",
-    "def operation(x):\n",
-    "    return al.ArrayWithTime.from_list(x, drop_early_nans=True, squeeze_type='to_2d')[:, slice(-1,None)]\n",
-    "\n",
-    "for s in [s2,s1]:\n",
-    "    pred = operation(s.predictions)\n",
-    "    sl = stim[-pred.shape[0]:]==1\n",
-    "    error = (pred - X[-pred.shape[0]:])\n",
-    "    axs[0,0].plot(error.t[sl], error[sl,-1], '.')\n",
-    "axs[0,0].legend(['no stim regression', 'with stim regression'])\n",
-    "axs[0,0].set_title('Error comparison for timepoints with stimulation')\n"
+    "for o in [o1, o2]:\n",
+    "    o = ArrayWithTime(o, o.t + o.dt*n_steps)\n",
+    "    error = ArrayWithTime.subtract_aligned_indices(o, X)\n",
+    "    s = error.time_to_sample(stim.t[stim.flatten() == 1])+0\n",
+    "    axs[0,0].plot(error.t[s], error[s,2], '.')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": []
