--- a/workspace/day-notebooks/25-03-19.ipynb
+++ b/workspace/day-notebooks/25-03-19.ipynb
@@ -9,9 +9,10 @@
    "source": [
     "import numpy as np\n",
     "from adaptive_latents.input_sources import LDS\n",
+    "from adaptive_latents import ArrayWithTime\n",
     "import adaptive_latents\n",
     "from adaptive_latents import VJF\n",
-    "from tqdm.autonotebook import trange\n",
+    "from tqdm.notebook import trange, tqdm\n",
     "\n",
     "import matplotlib.pyplot as plt\n"
    ]
@@ -34,13 +35,13 @@
    "outputs": [],
    "source": [
     "transitions_per_rotation = 30\n",
-    "radius = 5\n",
-    "_, Y, stim = LDS.nest_dynamical_system(500, radius=radius, u_function=lambda **_: np.zeros(3), rng=rng)\n",
+    "radius = 10\n",
+    "_, Y, _ = LDS.nest_dynamical_system(rotations=1000, transitions_per_rotation=transitions_per_rotation, radius=radius, u_function=lambda **_: np.zeros(3), rng=rng)\n",
+    "Y = Y\n",
     "\n",
     "predictor = VJF(latent_d=2, rng=rng)\n",
     "\n",
-    "mu = predictor.offline_run_on(Y, show_tqdm=True)\n",
-    "\n"
+    "predictor.offline_run_on([(Y, 'X')], convinient_return=False, show_tqdm=True);\n"
    ]
   },
   {
@@ -50,28 +51,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = []\n",
-    "for i in trange(transitions_per_rotation+2):\n",
-    "    prediction = predictor.partial_fit_transform(adaptive_latents.ArrayWithTime([[i]], Y.t[-1]), stream='pred_obs_space')\n",
-    "    predictions.append(prediction)\n",
+    "trajectory = []\n",
+    "for i in trange(0, transitions_per_rotation+1):\n",
+    "    stream = 'pred_obs_space'  # TODO: change this string\n",
+    "    prediction = predictor.partial_fit_transform(ArrayWithTime([[i * Y.dt]], Y.t[-1]), stream=stream)\n",
+    "    trajectory.append(prediction)\n",
     "\n",
-    "trajectory = np.squeeze(predictions)\n",
-    "\n",
-    "np.linalg.norm(trajectory[-1] - Y[-1])/np.linalg.norm(Y[-1])\n"
+    "trajectory = np.squeeze(trajectory)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
