fixes the simulation/stim off-by-one error

--- a/workspace/day-notebooks/25-03-17.ipynb
+++ b/workspace/day-notebooks/25-03-17.ipynb
@@ -14,10 +14,11 @@
     "from adaptive_latents.transformer import StreamingTransformer\n",
     "import matplotlib.pyplot as plt\n",
     "from adaptive_latents import VJF, Bubblewrap, StreamingKalmanFilter\n",
+    "from adaptive_latents.predictor import Predictor\n",
     "from adaptive_latents.regressions import BaseKNearestNeighborRegressor\n",
     "import numpy as np\n",
-    "\n",
-    "rng = np.random.default_rng()\n"
+    "import pytest_timeout\n",
+    "\n"
    ]
   },
   {
@@ -27,9 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi, u_function='constant')\n",
+    "rng = np.random.default_rng(0)\n",
+    "\n",
+    "_, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi, stims_per_rotation=.05, u_function='constant', rng=rng)\n",
     "# _, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi, u_function=lambda **k: np.zeros(3))\n",
-    "stim.t = stim.t"
+    "\n",
+    "stim.t = stim.t "
    ]
   },
   {
@@ -57,12 +61,12 @@
    "outputs": [],
    "source": [
     "class StimRegressor(StreamingTransformer):\n",
-    "    def __init__(self, autoreg=None, attempt_correction=True, input_streams=None, output_streams=None, log_level=None):\n",
-    "        input_streams = input_streams or {2:'X', 1:'stim', 0:'dt_X'}\n",
+    "    def __init__(self, autoreg=None, attempt_correction=True, input_streams=None, output_streams=None, log_level=None,):\n",
+    "        input_streams = input_streams or {1:'X', 0:'stim', 2:'dt_X'}\n",
     "        super().__init__(input_streams=input_streams, output_streams=output_streams, log_level=log_level)\n",
     "        if autoreg is None:\n",
     "            autoreg = StreamingKalmanFilter()\n",
-    "        self.autoreg = autoreg\n",
+    "        self.autoreg: Predictor = autoreg\n",
     "        self.attempt_correction = attempt_correction\n",
     "        self.stim_reg = BaseKNearestNeighborRegressor(k=2)\n",
     "        self.last_seen_stims = deque(maxlen=1)\n",
@@ -70,31 +74,66 @@
     "\n",
     "    def _partial_fit_transform(self, data, stream, return_output_stream):\n",
     "        if self.input_streams[stream] == 'X':\n",
-    "            if self.last_seen_stims and np.array(self.last_seen_stims).any():\n",
-    "                prediction = self.autoreg.partial_fit_transform(np.array([[X.dt]]), 'dt_X')\n",
-    "                self.stim_reg.observe(self.autoreg.state, prediction - data)\n",
-    "            self.autoreg.partial_fit_transform(data, 'X')\n",
-    "        \n",
-    "        if self.input_streams[stream] == 'dt_X':\n",
-    "            data = self.autoreg.partial_fit_transform(data, 'dt_X')\n",
-    "            if self.last_seen_stims and np.array(self.last_seen_stims).any() and self.attempt_correction:\n",
-    "                # raise  Exception()\n",
-    "                pred = self.stim_reg.predict(self.autoreg.state)\n",
-    "                data = data * np.nan\n",
-    "            \n",
+    "            data_depth = 1\n",
+    "            assert data.shape[0] == data_depth, data.shape\n",
     "\n",
-    "        if self.input_streams[stream] == 'stim':\n",
+    "            if np.isfinite(data).all():\n",
+    "                self.autoreg.observe(data, stream=self.input_streams[stream])\n",
+    "            data = ArrayWithTime.from_transformed_data(self.autoreg.get_state().reshape(data_depth,-1), data)\n",
+    "\n",
+    "        elif self.input_streams[stream] == 'dt_X':\n",
+    "            steps = self.autoreg.data_to_n_steps(data)\n",
+    "            pred = self.autoreg.predict(n_steps=steps)\n",
+    "            \n",
+    "            if np.isfinite(pred).all():\n",
+    "                if np.any(self.last_seen_stims):\n",
+    "                    pred[2] = pred[2]  + 80\n",
+    "            \n",
+    "            data = ArrayWithTime.from_transformed_data(pred, data)\n",
+    "\n",
+    "        elif self.input_streams[stream] == 'stim':\n",
     "            self.last_seen_stims.append(data)\n",
     "\n",
     "        return (data, stream) if return_output_stream else data\n",
-    "\n",
-    "\n",
+    "    \n",
     "    def get_params(self, deep=True):\n",
-    "        return super().get_params(deep) | dict(autoreg=self.autoreg)\n",
+    "        return super().get_params(deep) | dict(autoreg=self.autoreg, attempt_correction=self.attempt_correction)\n",
+    "\n",
+    "    # this is mostly for testing\n",
+    "    def expected_data_streams(self, rng, DIM):\n",
+    "        # TODO: do this better\n",
+    "        return [\n",
+    "            (rng.normal(size=(1, DIM)), 'X'),\n",
+    "            (np.ones((1,1)), 'dt_X'),\n",
+    "            (np.zeros((1,1)) * (rng.random() > .9), 'toggle_parameter_fitting'),\n",
+    "        ]\n",
+    "\n",
+    "    # \n",
+    "    # def _partial_fit_transform(self, data, stream, return_output_stream):\n",
+    "    #     if self.input_streams[stream] == 'X':\n",
+    "    #         if self.last_seen_stims and np.array(self.last_seen_stims).any():\n",
+    "    #             prediction = self.autoreg.partial_fit_transform(np.array([[X.dt]]), 'dt_X')\n",
+    "    #             self.stim_reg.observe(self.autoreg.state, prediction - data)\n",
+    "    #         self.autoreg.partial_fit_transform(data, 'X')\n",
+    "    #     \n",
+    "    #     if self.input_streams[stream] == 'dt_X':\n",
+    "    #         data = self.autoreg.partial_fit_transform(data, 'dt_X')\n",
+    "    #         if self.last_seen_stims and np.array(self.last_seen_stims).any() and self.attempt_correction:\n",
+    "    #             # raise  Exception()\n",
+    "    #             pred = self.stim_reg.predict(self.autoreg.state)\n",
+    "    #             data = data * np.nan\n",
+    "    #         \n",
+    "    # \n",
+    "    #     if self.input_streams[stream] == 'stim':\n",
+    "    #         self.last_seen_stims.append(data)\n",
+    "    # \n",
+    "    #     return (data, stream) if return_output_stream else data\n",
+    "    # \n",
+    "    # \n",
     "\n",
     "\n",
     "\n",
-    "# StimRegressor().test_if_api_compatible();\n",
+    "StimRegressor().test_if_api_compatible();\n",
     "        \n"
    ]
   },
@@ -106,13 +145,13 @@
    "outputs": [],
    "source": [
     "n_steps = 1\n",
-    "qX = ArrayWithTime(X.dt * n_steps * np.ones((len(X),1)), (X.t + stim.t) / 2)\n",
+    "qX = ArrayWithTime(n_steps * np.ones((stim.shape[0] - 1, 1)), (stim.t[1:] + X.t[1:])/2)\n",
     "\n",
-    "s1 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=False)\n",
-    "o1 = s1.offline_run_on([qX, stim, X], show_tqdm=True)\n",
+    "s1 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=False, log_level=1)\n",
+    "o1 = s1.offline_run_on([stim, X, qX], show_tqdm=True, convinient_return=2)\n",
     "\n",
-    "s2 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=True)\n",
-    "o2 = s2.offline_run_on([qX, stim, X], show_tqdm=True)\n",
+    "# s2 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=True)\n",
+    "# o2 = s2.offline_run_on([qX, stim, X], show_tqdm=True)\n",
     "\n"
    ]
   },
@@ -123,24 +162,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib qt\n",
     "_, axs = plt.subplots(squeeze=False)\n",
     "\n",
-    "for o in [o1, o2]:\n",
-    "    o = ArrayWithTime(o, o.t + o.dt*n_steps)\n",
-    "    error = ArrayWithTime.subtract_aligned_indices(o, X)\n",
-    "    s = error.time_to_sample(stim.t[stim.flatten() == 1])+0\n",
-    "    axs[0,0].plot(error.t[s], error[s,2], '.')\n",
-    "    "
+    "for o in [o1]:\n",
+    "    axs[0,0].plot(X.t, X[:,2], '.')\n",
+    "    axs[0,0].plot(o.t, o[:,2], '.')\n",
+    "\n",
+    "    # s = error.time_to_sample(stim.t[stim.flatten() == 1])+0\n",
+    "    # axs[0,0].plot(error.t[s], error[s,2], '.')\n",
+    "l,r = 33.46, 33.69\n",
+    "\n",
+    "for t in stim.t[stim.flatten() == 1]:\n",
+    "    axs[0,0].axvline(t, color='k', linestyle='--')\n",
+    "\n",
+    "# for t in X.t[(l <= X.t) & (X.t < r)]:\n",
+    "#     axs[0,0].axvline(t, alpha=.3, color='b')\n",
+    "# \n",
+    "# for t in qX.t[(l <= qX.t) & (qX.t < r)]:\n",
+    "#     axs[0,0].axvline(t, alpha=.3, color='r')\n",
+    "    \n",
+    "axs[0,0].set_xlim(l,r)\n",
+    "axs[0,0].set_ylabel('prediction error')\n",
+    "axs[0,0].set_xlabel('time (a.u., technically radians)')\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
