--- a/workspace/day-notebooks/25-03-17.ipynb
+++ b/workspace/day-notebooks/25-03-17.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import adaptive_latents as al\n",
     "from adaptive_latents import ArrayWithTime\n",
     "from collections import deque\n",
     "from adaptive_latents.input_sources import LDS, KalmanFilter\n",
@@ -17,7 +16,7 @@
     "from adaptive_latents.predictor import Predictor\n",
     "from adaptive_latents.regressions import BaseKNearestNeighborRegressor\n",
     "import numpy as np\n",
-    "import pytest_timeout\n",
+    "import itertools\n",
     "\n"
    ]
   },
@@ -28,10 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(0)\n",
+    "rng = np.random.default_rng(1)\n",
     "\n",
-    "_, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi, stims_per_rotation=.05, u_function='constant', rng=rng)\n",
-    "# _, X, stim = LDS.nest_dynamical_system(100, transitions_per_rotation=60 + 1/np.pi, u_function=lambda **k: np.zeros(3))\n",
+    "_, X, stim = LDS.nest_dynamical_system(500, transitions_per_rotation=60 + 1/np.pi, u_function='curvy', rng=rng, early_shift=1e-8)\n",
     "\n",
     "stim.t = stim.t "
    ]
@@ -61,14 +59,16 @@
    "outputs": [],
    "source": [
     "class StimRegressor(StreamingTransformer):\n",
-    "    def __init__(self, autoreg=None, attempt_correction=True, input_streams=None, output_streams=None, log_level=None,):\n",
+    "    def __init__(self, autoreg=None, stim_reg=None, attempt_correction=True, input_streams=None, output_streams=None, log_level=None,):\n",
     "        input_streams = input_streams or {1:'X', 0:'stim', 2:'dt_X'}\n",
     "        super().__init__(input_streams=input_streams, output_streams=output_streams, log_level=log_level)\n",
     "        if autoreg is None:\n",
     "            autoreg = StreamingKalmanFilter()\n",
     "        self.autoreg: Predictor = autoreg\n",
     "        self.attempt_correction = attempt_correction\n",
-    "        self.stim_reg = BaseKNearestNeighborRegressor(k=2)\n",
+    "        if stim_reg is None:\n",
+    "            stim_reg = BaseKNearestNeighborRegressor(k=2)\n",
+    "        self.stim_reg = stim_reg\n",
     "        self.last_seen_stims = deque(maxlen=1)\n",
     "\n",
     "\n",
@@ -76,9 +76,19 @@
     "        if self.input_streams[stream] == 'X':\n",
     "            data_depth = 1\n",
     "            assert data.shape[0] == data_depth, data.shape\n",
-    "\n",
+    "            \n",
     "            if np.isfinite(data).all():\n",
-    "                self.autoreg.observe(data, stream=self.input_streams[stream])\n",
+    "                if self.last_seen_stims and self.last_seen_stims[-1]:\n",
+    "                    pred = self.autoreg.predict(n_steps=1)\n",
+    "                    residual = data - pred\n",
+    "                    self.stim_reg.observe(pred, residual)\n",
+    "                    \n",
+    "                    self.autoreg.toggle_parameter_fitting(False)\n",
+    "                    self.autoreg.observe(data, stream=self.input_streams[stream])\n",
+    "                    self.autoreg.toggle_parameter_fitting(True)\n",
+    "                else:\n",
+    "                    self.autoreg.observe(data, stream=self.input_streams[stream])\n",
+    "                \n",
     "            data = ArrayWithTime.from_transformed_data(self.autoreg.get_state().reshape(data_depth,-1), data)\n",
     "\n",
     "        elif self.input_streams[stream] == 'dt_X':\n",
@@ -86,8 +96,8 @@
     "            pred = self.autoreg.predict(n_steps=steps)\n",
     "            \n",
     "            if np.isfinite(pred).all():\n",
-    "                if np.any(self.last_seen_stims):\n",
-    "                    pred[2] = pred[2]  + 80\n",
+    "                if self.last_seen_stims and  self.last_seen_stims[-1] and self.attempt_correction:\n",
+    "                    pred = pred + self.stim_reg.predict(pred)\n",
     "            \n",
     "            data = ArrayWithTime.from_transformed_data(pred, data)\n",
     "\n",
@@ -97,7 +107,7 @@
     "        return (data, stream) if return_output_stream else data\n",
     "    \n",
     "    def get_params(self, deep=True):\n",
-    "        return super().get_params(deep) | dict(autoreg=self.autoreg, attempt_correction=self.attempt_correction)\n",
+    "        return super().get_params(deep) | dict(autoreg=self.autoreg, stim_reg=self.stim_reg, attempt_correction=self.attempt_correction)\n",
     "\n",
     "    # this is mostly for testing\n",
     "    def expected_data_streams(self, rng, DIM):\n",
@@ -107,31 +117,6 @@
     "            (np.ones((1,1)), 'dt_X'),\n",
     "            (np.zeros((1,1)) * (rng.random() > .9), 'toggle_parameter_fitting'),\n",
     "        ]\n",
-    "\n",
-    "    # \n",
-    "    # def _partial_fit_transform(self, data, stream, return_output_stream):\n",
-    "    #     if self.input_streams[stream] == 'X':\n",
-    "    #         if self.last_seen_stims and np.array(self.last_seen_stims).any():\n",
-    "    #             prediction = self.autoreg.partial_fit_transform(np.array([[X.dt]]), 'dt_X')\n",
-    "    #             self.stim_reg.observe(self.autoreg.state, prediction - data)\n",
-    "    #         self.autoreg.partial_fit_transform(data, 'X')\n",
-    "    #     \n",
-    "    #     if self.input_streams[stream] == 'dt_X':\n",
-    "    #         data = self.autoreg.partial_fit_transform(data, 'dt_X')\n",
-    "    #         if self.last_seen_stims and np.array(self.last_seen_stims).any() and self.attempt_correction:\n",
-    "    #             # raise  Exception()\n",
-    "    #             pred = self.stim_reg.predict(self.autoreg.state)\n",
-    "    #             data = data * np.nan\n",
-    "    #         \n",
-    "    # \n",
-    "    #     if self.input_streams[stream] == 'stim':\n",
-    "    #         self.last_seen_stims.append(data)\n",
-    "    # \n",
-    "    #     return (data, stream) if return_output_stream else data\n",
-    "    # \n",
-    "    # \n",
-    "\n",
-    "\n",
     "\n",
     "StimRegressor().test_if_api_compatible();\n",
     "        \n"
@@ -147,11 +132,17 @@
     "n_steps = 1\n",
     "qX = ArrayWithTime(n_steps * np.ones((stim.shape[0] - 1, 1)), (stim.t[1:] + X.t[1:])/2)\n",
     "\n",
-    "s1 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=False, log_level=1)\n",
+    "s1 = StimRegressor(autoreg=StreamingKalmanFilter(), stim_reg=BaseKNearestNeighborRegressor(k=10, maxlen=200), attempt_correction=True)\n",
     "o1 = s1.offline_run_on([stim, X, qX], show_tqdm=True, convinient_return=2)\n",
     "\n",
-    "# s2 = StimRegressor(autoreg=StreamingKalmanFilter(), attempt_correction=True)\n",
-    "# o2 = s2.offline_run_on([qX, stim, X], show_tqdm=True)\n",
+    "s2 = StimRegressor(autoreg=Bubblewrap(), stim_reg=BaseKNearestNeighborRegressor(k=10, maxlen=200), attempt_correction=True)\n",
+    "o2 = s2.offline_run_on([stim, X, qX], show_tqdm=True, convinient_return=2)\n",
+    "\n",
+    "s3 = StimRegressor(autoreg=VJF(), stim_reg=BaseKNearestNeighborRegressor(k=10, maxlen=200), attempt_correction=True)\n",
+    "o3 = s3.offline_run_on([stim, X, qX], show_tqdm=True, convinient_return=2)\n",
+    "\n",
+    "s4 = StimRegressor(autoreg=StreamingKalmanFilter(), stim_reg=BaseKNearestNeighborRegressor(k=10, maxlen=200), attempt_correction=False)\n",
+    "o4 = s4.offline_run_on([stim, X, qX], show_tqdm=True, convinient_return=2)\n",
     "\n"
    ]
   },
@@ -162,31 +153,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib inline\n",
     "_, axs = plt.subplots(squeeze=False)\n",
     "\n",
-    "for o in [o1]:\n",
-    "    axs[0,0].plot(X.t, X[:,2], '.')\n",
-    "    axs[0,0].plot(o.t, o[:,2], '.')\n",
+    "order = list(reversed(['kalman filter', 'bubblewrap', 'vjf', 'kalman filter (no correction)']))\n",
     "\n",
-    "    # s = error.time_to_sample(stim.t[stim.flatten() == 1])+0\n",
-    "    # axs[0,0].plot(error.t[s], error[s,2], '.')\n",
-    "l,r = 33.46, 33.69\n",
-    "\n",
-    "for t in stim.t[stim.flatten() == 1]:\n",
-    "    axs[0,0].axvline(t, color='k', linestyle='--')\n",
-    "\n",
-    "# for t in X.t[(l <= X.t) & (X.t < r)]:\n",
-    "#     axs[0,0].axvline(t, alpha=.3, color='b')\n",
-    "# \n",
-    "# for t in qX.t[(l <= qX.t) & (qX.t < r)]:\n",
-    "#     axs[0,0].axvline(t, alpha=.3, color='r')\n",
+    "test_dim = 0\n",
+    "on_stim = 0\n",
+    "s = (stim.t[stim.flatten() == on_stim], test_dim)\n",
+    "for o, name in zip([o4, o3, o2, o1], order):\n",
+    "    error = ArrayWithTime.subtract_aligned_indices(o, X)\n",
+    "    to_plot = error.slice_by_time(*s, all_axes=True)\n",
+    "    true = X.slice_by_time(*s, all_axes=True)\n",
     "    \n",
-    "axs[0,0].set_xlim(l,r)\n",
+    "    print(f\"{name: <30} {np.nanstd(to_plot)/ np.nanstd(true):.2f}\")\n",
+    "    axs[0,0].plot(to_plot.t, to_plot, '.')\n",
+    "\n",
+    "\n",
+    "\n",
+    "axs[0,0].legend(order)\n",
+    "axs[0,0].set_title(f'comparison of d{test_dim} on {\"stim\" if on_stim else \"non-stim\"} samples')\n",
     "axs[0,0].set_ylabel('prediction error')\n",
-    "axs[0,0].set_xlabel('time (a.u., technically radians)')\n",
+    "axs[0,0].set_xlabel('time (a.u., technically rotations)');\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
+    "\n",
+    "XX, YY = np.meshgrid(np.linspace(-10,10,14), np.linspace(-10,10,12))\n",
+    "Z = 0 * XX\n",
+    "\n",
+    "def S(state, s):\n",
+    "    return s * state[0] / np.linalg.norm(state[:2])\n",
+    "\n",
+    "for i_x, i_y in itertools.product(range(XX.shape[0]), range(XX.shape[1])):\n",
+    "    Z[i_x, i_y] = S([XX[i_x,i_y], YY[i_x,i_y], None], 1)\n",
+    "\n",
+    "ax.plot_surface(XX, YY, Z, zorder=10)\n",
+    "ax.plot(s1.stim_reg.history[:,0], s1.stim_reg.history[:,1], s1.stim_reg.history[:,5], '.', zorder=10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
+    "\n",
+    "n_points = 100\n",
+    "\n",
+    "XX, YY = np.meshgrid(np.linspace(-10,10,n_points), np.linspace(-10,10,n_points))\n",
+    "Z = 0 * XX\n",
+    "\n",
+    "def S(state, s):\n",
+    "    return s * state[0] / np.linalg.norm(state[:2])\n",
+    "\n",
+    "for i_x, i_y in itertools.product(range(XX.shape[0]), range(XX.shape[1])):\n",
+    "    Z[i_x, i_y] = s1.stim_reg.predict(np.array([XX[i_x, i_y], YY[i_x, i_y], 0]))[-1] #  - S([XX[i_x,i_y], YY[i_x,i_y], None], 1)\n",
+    "\n",
+    "ax.plot_surface(XX, YY, Z, zorder=10)\n",
+    "print(Z.mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
