moves stim regression to its own class

--- a/workspace/day-notebooks/25-03-17.ipynb
+++ b/workspace/day-notebooks/25-03-17.ipynb
@@ -8,13 +8,11 @@
    "outputs": [],
    "source": [
     "from adaptive_latents import ArrayWithTime\n",
-    "from collections import deque\n",
-    "from adaptive_latents.input_sources import LDS, KalmanFilter\n",
-    "from adaptive_latents.transformer import StreamingTransformer\n",
+    "from adaptive_latents.input_sources import LDS\n",
     "import matplotlib.pyplot as plt\n",
     "from adaptive_latents import VJF, Bubblewrap, StreamingKalmanFilter\n",
-    "from adaptive_latents.predictor import Predictor\n",
     "from adaptive_latents.regressions import BaseKNearestNeighborRegressor\n",
+    "from adaptive_latents.stim_regressor import StimRegressor\n",
     "import numpy as np\n",
     "import itertools\n",
     "\n"
@@ -58,65 +56,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class StimRegressor(StreamingTransformer):\n",
-    "    def __init__(self, autoreg=None, stim_reg=None, attempt_correction=True, input_streams=None, output_streams=None, log_level=None,):\n",
-    "        input_streams = input_streams or {1:'X', 0:'stim', 2:'dt_X'}\n",
-    "        super().__init__(input_streams=input_streams, output_streams=output_streams, log_level=log_level)\n",
-    "        if autoreg is None:\n",
-    "            autoreg = StreamingKalmanFilter()\n",
-    "        self.autoreg: Predictor = autoreg\n",
-    "        self.attempt_correction = attempt_correction\n",
-    "        if stim_reg is None:\n",
-    "            stim_reg = BaseKNearestNeighborRegressor(k=2)\n",
-    "        self.stim_reg = stim_reg\n",
-    "        self.last_seen_stims = deque(maxlen=1)\n",
-    "\n",
-    "\n",
-    "    def _partial_fit_transform(self, data, stream, return_output_stream):\n",
-    "        if self.input_streams[stream] == 'X':\n",
-    "            data_depth = 1\n",
-    "            assert data.shape[0] == data_depth, data.shape\n",
-    "            \n",
-    "            if np.isfinite(data).all():\n",
-    "                if self.last_seen_stims and self.last_seen_stims[-1]:\n",
-    "                    pred = self.autoreg.predict(n_steps=1)\n",
-    "                    residual = data - pred\n",
-    "                    self.stim_reg.observe(pred, residual)\n",
-    "                    \n",
-    "                    self.autoreg.toggle_parameter_fitting(False)\n",
-    "                    self.autoreg.observe(data, stream=self.input_streams[stream])\n",
-    "                    self.autoreg.toggle_parameter_fitting(True)\n",
-    "                else:\n",
-    "                    self.autoreg.observe(data, stream=self.input_streams[stream])\n",
-    "                \n",
-    "            data = ArrayWithTime.from_transformed_data(self.autoreg.get_state().reshape(data_depth,-1), data)\n",
-    "\n",
-    "        elif self.input_streams[stream] == 'dt_X':\n",
-    "            steps = self.autoreg.data_to_n_steps(data)\n",
-    "            pred = self.autoreg.predict(n_steps=steps)\n",
-    "            \n",
-    "            if np.isfinite(pred).all():\n",
-    "                if self.last_seen_stims and  self.last_seen_stims[-1] and self.attempt_correction:\n",
-    "                    pred = pred + self.stim_reg.predict(pred)\n",
-    "            \n",
-    "            data = ArrayWithTime.from_transformed_data(pred, data)\n",
-    "\n",
-    "        elif self.input_streams[stream] == 'stim':\n",
-    "            self.last_seen_stims.append(data)\n",
-    "\n",
-    "        return (data, stream) if return_output_stream else data\n",
-    "    \n",
-    "    def get_params(self, deep=True):\n",
-    "        return super().get_params(deep) | dict(autoreg=self.autoreg, stim_reg=self.stim_reg, attempt_correction=self.attempt_correction)\n",
-    "\n",
-    "    # this is mostly for testing\n",
-    "    def expected_data_streams(self, rng, DIM):\n",
-    "        # TODO: do this better\n",
-    "        return [\n",
-    "            (rng.normal(size=(1, DIM)), 'X'),\n",
-    "            (np.ones((1,1)), 'dt_X'),\n",
-    "            (np.zeros((1,1)) * (rng.random() > .9), 'toggle_parameter_fitting'),\n",
-    "        ]\n",
     "\n",
     "StimRegressor().test_if_api_compatible();\n",
     "        \n"
