adds a notebook that runs StimReg in paralell with LDS

--- a/workspace/day-notebooks/25-03-17.ipynb
+++ b/workspace/day-notebooks/25-03-17.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "rng = np.random.default_rng(1)\n",
     "\n",
-    "_, X, stim = LDS.nest_dynamical_system(500, transitions_per_rotation=60 + 1/np.pi, u_function='curvy', rng=rng, early_shift=1e-8)\n",
+    "_, X, stim = LDS.run_nest_dynamical_system(500, transitions_per_rotation=60 + 1 / np.pi, u_function='curvy', rng=rng, early_shift=1e-8)\n",
     "\n",
     "stim.t = stim.t "
    ]
