--- a/workspace/day-notebooks/25-03-19.ipynb
+++ b/workspace/day-notebooks/25-03-19.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "transitions_per_rotation = 30\n",
     "radius = 10\n",
-    "_, Y, _ = LDS.nest_dynamical_system(rotations=1000, transitions_per_rotation=transitions_per_rotation, radius=radius, u_function=lambda **_: np.zeros(3), rng=rng)\n",
+    "_, Y, _ = LDS.run_nest_dynamical_system(rotations=1000, transitions_per_rotation=transitions_per_rotation, radius=radius, u_function=lambda **_: np.zeros(3), rng=rng)\n",
     "Y = Y\n",
     "\n",
     "predictor = VJF(latent_d=2, rng=rng)\n",
