--- a/workspace/day-notebooks/VJF.ipynb
+++ b/workspace/day-notebooks/VJF.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "x, y, stim = LDS.nest_dynamical_system(500, rng=rng)\n",
+    "x, y, stim = LDS.run_nest_dynamical_system(500, rng=rng)\n",
     "\n",
     "u = 0*stim\n",
     "\n",
